# yapas

./: Readme.md  pyproject.toml
tests/: conftest.py
tests/test_utils/: test_bytes.py
v1/: asgi_app.py  asgi_server.py  dispatcher.py  main.py  request.py  types.py  utils.py
v1/app/: routes.py
yapas/: __init__.py  __main__.py  asgi.py  locations.ini
yapas/app/: routes.py
yapas/conf/: constants.py
yapas/core/: __init__.py  constants.py  dispatcher.py  exceptions.py  response.py  server.py  signals.py  static.py  types.py
yapas/core/abs/: client.py  dispatcher.py  handlers.py  messages.py  server.py
yapas/core/cache/: memory.py
yapas/core/client/: aiohttp.py  socket.py
yapas/core/middlewares/: messages.py  metrics.py
yapas/core/server/: handlers.py  proxy.py
yapas/static/templates/: index.html
