[tool.poetry]
name = "async-server"
version = "0.1.0"
description = ""
authors = ["andrei-samofalov <andrei.e.samofalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
